--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "animate.css": "^4.1.1",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
