--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "animate.css": "^4.1.1",
+    "file-saver": "^2.0.5",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.8",
@@ -29,6 +30,7 @@
     "@angular-devkit/build-angular": "~12.2.16",
     "@angular/cli": "~12.2.16",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
