--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "animate.css": "^4.1.1",
     "file-saver": "^2.0.5",
     "ng2-search-filter": "^0.5.1",
+    "ngx-owl-carousel-o": "^6.0.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.8",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
