--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/localize": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.3",
     "file-saver": "^2.0.5",
     "ng2-search-filter": "^0.5.1",
     "ngx-owl-carousel-o": "^6.0.2",
