--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@fortawesome/angular-fontawesome": "^0.10.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-brands-svg-icons": "^6.1.0",
+    "@fortawesome/free-regular-svg-icons": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@fortawesome/pro-light-svg-icons": "^6.1.0",
+    "@fortawesome/pro-regular-svg-icons": "^6.1.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
