--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "animate.css": "^4.1.1",
+    "chart.js": "^3.7.1",
+    "ng2-charts": "^3.0.11",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^11.4.8",
